manifests/infrastructure/manifests/longhorn/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn
  annotations:
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/icon: https://longhorn.io/img/logos/longhorn-icon-white.png
    forecastle.stakater.com/appName: Longhorn
    forecastle.stakater.com/group: Infrastructure
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: ingress-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: longhorn.cluster.rebelinblue.com
    http:
      paths:
      - backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
    - hosts:
        - longhorn.cluster.rebelinblue.com
      secretName: longhorn-tls
